# Encoder_gst

./: CMakeLists.txt  readme.md
c_src/: encoder_gst.c  encoder_gst.h  main.c  video_processor.c  video_processor.h
test/: encoder_gst_test.exs
